@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2023, 2025, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2023, 2026, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -60,6 +60,13 @@ public class AllocTest extends CLayouts {
         }
     }
 
+    // Save `jvmArgsAppend` for `OfVirtual`
+    @Fork(jvmArgs = {"--enable-native-access=ALL-UNNAMED", "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED", "-Djdk.internal.foreign.native.confined.pool.power.size=-1"})
+    @Benchmark
+    public long alloc_confined_no_pool() {
+        return alloc_confined();
+    }
+
     @Benchmark
     public long alloc_calloc_arena() {
         try (CallocArena arena = new CallocArena()) {
@@ -73,6 +80,9 @@ public class AllocTest extends CLayouts {
             return arena.allocate(size).address();
         }
     }
+
+    @Fork(value = 3, jvmArgsAppend = "-Djmh.executor=VIRTUAL")
+    public static class OfVirtual extends AllocTest {}
 
     private static class CallocArena implements Arena {
 
